<resources>
    <string name="app_name">Myloginapp</string>
    <string name="login_page">Login Page</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="Email">Email</string>
    <string name="Security">Security</string>
    <string name="Register">Register</string>
    <string name="Clear">Clear</string>
    <string name="Display">Display</string>
    <string name="OverWrite">OverWrite</string>
</resources>