<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"

    tools:context=".MainActivity">



    <TextView
        android:id="@+id/sigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:hint="@string/login_page"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="40sp" />

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigin"
        android:id="@+id/relative1"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/email"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:drawablePadding="20dp"
        android:hint="@string/Email"
        android:background="@color/green"

        android:gravity="center"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigin"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:gravity="center"


        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/green"
        android:gravity="center"

        android:hint="@string/Security"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/security"
        android:id="@+id/relative2"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:hint="@string/Register"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:gravity="center"
            android:backgroundTint="@color/orange"
            android:textSize="20sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/Clear"
            android:id="@+id/clear"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:textSize="20sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative2"
        android:id="@+id/relative3"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/Display"
            android:id="@+id/display"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:textSize="20sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/OverWrite"
            android:layout_marginTop="10dp"
            android:id="@+id/overwrite"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:gravity="center"
            android:textSize="20sp"
            android:backgroundTint="@color/orange"

            />
    </LinearLayout>







    <Switch
        android:id="@+id/simpleswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative3"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:checked="false"
        android:padding="10dp"
        android:text="Switch ON/OFF"
        android:textColor="@color/black"
        android:textOff="Off"
        android:textOn="On"
        android:textSize="30dp"
        android:paddingTop="20dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        tools:ignore="HardcodedText,SpUsage,UseSwitchCompatOrMaterialXml" />

</RelativeLayout>